[project]
name = "holnex-layer"
version = "0.1.0"
description = "Layer creada para el manejo de AWS DynamoDB en funciones escalables"
authors = [{name = "Pablo Ospino"}]
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
include = ["ddb_client*", "utils*"]